--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,34 @@
   </head>
 
   <body>
+    <header class="bg-gray-800 text-white p-4">
+      <div class="container mx-auto flex justify-between items-center">
+        <h1 class="text-xl font-bold">
+          <%= link_to "The Daily Dad Joke", root_path, class: "text-white no-underline" %>
+        </h1>
+        <% if user_signed_in? %>
+          <div class="flex items-center space-x-4">
+            <span>Welcome, <%= current_user.email %></span>
+            <%= link_to "Sign out", destroy_user_session_path, 
+                method: :delete, 
+                class: "bg-red-600 hover:bg-red-700 px-3 py-1 rounded text-sm" %>
+          </div>
+        <% end %>
+      </div>
+    </header>
+
+    <% if notice %>
+      <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 m-4 rounded">
+        <%= notice %>
+      </div>
+    <% end %>
+
+    <% if alert %>
+      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 m-4 rounded">
+        <%= alert %>
+      </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
