--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%# Tailwind CSS CDN for development %>
+    <script src="https://cdn.tailwindcss.com"></script>
     <%= javascript_importmap_tags %>
   </head>
 
@@ -31,8 +33,8 @@
         <% if user_signed_in? %>
           <div class="flex items-center space-x-4">
             <span>Welcome, <%= current_user.email %></span>
-            <%= link_to "Sign out", destroy_user_session_path, 
-                method: :delete, 
+            <%= link_to "Sign out", destroy_user_session_path,
+                method: :delete,
                 class: "bg-red-600 hover:bg-red-700 px-3 py-1 rounded text-sm" %>
           </div>
         <% end %>
