--- a/app/views/jokes/index.html.erb
+++ b/app/views/jokes/index.html.erb
@@ -68,8 +68,8 @@
                 </span>
                 <small class="text-gray-500"><%= joke.created_at.strftime("%b %d, %Y") %></small>
               </div>
-              <h3 class="text-lg font-semibold text-gray-700 mb-2">Q: <%= joke.question %></h3>
-              <p class="text-gray-600">A: <%= joke.answer %></p>
+              <h3 class="text-lg font-semibold text-gray-700 mb-2">Q: <%= joke.prompt %></h3>
+              <p class="text-gray-600">A: <%= joke.punchline %></p>
             </div>
 
             <% if joke.pending? %>
