--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
           <% if user_signed_in? %>
             <span>Welcome, <%= current_user.email %></span>
             <%= link_to "Sign out", destroy_user_session_path,
-                method: :delete,
+                data: { turbo_method: :delete },
                 class: "bg-red-600 hover:bg-red-700 px-3 py-1 rounded text-sm" %>
           <% end %>
         </nav>
