--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -21,8 +21,8 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%# Tailwind CSS CDN for development %>
     <script src="https://cdn.tailwindcss.com"></script>
-    <%# Google reCAPTCHA API %>
-    <%= javascript_include_tag "https://www.google.com/recaptcha/api.js", async: true, defer: true %>
+    <%# Google reCAPTCHA API - load synchronously to ensure it's available %>
+    <%= javascript_include_tag "https://www.google.com/recaptcha/api.js", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
