--- a/app/views/jokes/index.html.erb
+++ b/app/views/jokes/index.html.erb
@@ -70,6 +70,9 @@
               </div>
               <h3 class="text-lg font-semibold text-gray-700 mb-2">Q: <%= joke.prompt %></h3>
               <p class="text-gray-600">A: <%= joke.punchline %></p>
+              <% if joke.submitted_by.present? %>
+                <p class="text-sm text-gray-500 mt-2 italic">Submitted by: <%= joke.submitted_by %></p>
+              <% end %>
             </div>
 
             <% if joke.pending? %>
